# Athena

./: .gitignore  Agent.md  Makefile  README.md  docker-compose.yml  execution_guide.md  populate_dashboard.py  pyproject.toml  requirements-edge.txt  requirements-ml.txt  requirements.txt  ruff_errors.txt  run_demo.py  simulate.py  simulate_vehicle.py  test_route_logic.py  verify_route_prediction.py  verify_ws.py
.kiro/specs/athena-urban-intelligence/: design.md  requirements.md
dashboard/: README.md  control_dashboard_web.html  officer_app_web.html
dashboard/control-dashboard/: index.html  package-lock.json  package.json  tsconfig.json  typecheck_errors.txt  typecheck_errors_utf8.txt
dashboard/control-dashboard/src/: declarations.d.ts  main.tsx
dashboard/officer-app/: package.json
dashboard/officer-app/src/: App.tsx
data/models/: README.md
data/training/anpr/: README.md
data/training/yolo/: README.md
scripts/: deploy_model.sh  simulate_data.py
src/: __init__.py  config.py
src/common/: __init__.py  events.py  logger.py  schemas.py  utils.py
src/database/: __init__.py  models.py  session.py
src/edge/: __init__.py  anomaly_detector.py  greengrass_config.py  rtsp_capture.py
src/ml_models/anpr/: __init__.py  engine.py  train.py
src/ml_models/yolo_detector/: __init__.py  model.py  train.py
src/services/: main.py  nav_api.py  pipeline.py  proximity_engine.py  reid_service.py  route_predictor.py  vehicle_tracker.py  websocket_manager.py
tests/: __init__.py  test_config.py  test_edge_detector.py  test_schemas.py  test_utils.py
