[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "athena"
version = "0.1.0"
description = "AI-powered urban intelligence platform for inclusive & fluid cities"
requires-python = ">=3.11"
license = { text = "MIT" }

dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.23.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "sqlalchemy>=2.0.0",
    "psycopg2-binary>=2.9.9",
    "redis>=5.0.0",
    "minio>=7.2.0",
    "aiohttp>=3.9.0",
    "numpy>=1.26.0",
    "opencv-python-headless>=4.9.0",
    "python-multipart>=0.0.6",
]

[project.optional-dependencies]
ml = [
    "ultralytics>=8.1.0",
    "onnxruntime>=1.17.0",
    "torch>=2.1.0",
    "torchvision>=0.16.0",
    "imagehash>=4.3.0",
]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "mypy>=1.8.0",
    "ruff>=0.2.0",
    "black>=24.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_any_generics = true

[tool.ruff]
target-version = "py311"
line-length = 100
select = ["E", "F", "W", "I", "N", "UP", "ANN", "B", "S", "T20", "PT"]

[tool.black]
line-length = 100
target-version = ["py311"]
